Fix mobile navigation visibility by updating CSS media query
- Changed @media rule to hide only .menu-block instead of entire .menu-block-wrapper
- This allows mobile navigation trigger to remain visible on mobile devices
- Fixes hamburger menu not appearing on screens < 992px

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -665,7 +665,7 @@ bodt {
 
 /*responsive*/
 @media (max-width: 991px) {
-	.menu-block-wrapper {
+	.menu-block-wrapper .menu-block {
 		display: none;
 	}
 
